--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,257 +1,12 @@
+/* these two must come first */
 @import url("fonts/fonts.css");
+@import url("style_variables.css");
+
+/* these can go in any order */
 @import url("style_base.css");
+@import url("style_inventory.css");
+@import url("style_login.css");
+@import url("style_main.css");
 @import url("style_modal.css");
-
-:root {
-    font-size: 1rem;
-    font-family: "IBM Plex Sans", sans-serif;
-    font-weight: 450;
-
-    --black: hsl(255, 15%, 15%);
-    --shadow: hsla(255, 15%, 15%, 5%);
-    --btn-shadow: hsla(255, 15%, 15%, 10%);
-
-    --light-gray: hsl(255, 10%, 92%);
-    --light-gray-2: hsl(255, 10%, 95%);
-    --gray: hsl(255, 10%, 75%);
-
-    --white: hsl(255, 10%, 99%);
-
-    --light-blue: hsl(220, 80%, 95%);
-    --blue: hsl(220, 100%, 65%);
-    --dark-blue: hsl(220, 75%, 45%);
-    --blue-shadow: hsla(220, 100%, 65%, 30%);
-
-    --red: hsl(345, 100%, 65%);
-    --light-red: hsl(345, 100%, 95%);
-    --light-red-2: hsl(345, 100%, 85%);
-    --light-red-3: hsl(345, 100%, 98%);
-    --light-red-4: hsl(345, 100%, 93%);
-    --dark-red: hsl(345, 80%, 50%);
-    --red-shadow: hsla(345, 100%, 65%, 30%);
-
-    --green: hsl(135, 80%, 57%);
-    --dark-green: hsl(135, 80%, 44%);
-    --green-shadow: hsla(135, 80%, 57%, 30%);
-
-    --translucent: hsla(255, 10%, 99%, 80%);
-
-    --status-green: hsl(105, 80%, 57%);
-    --status-green-shadow: hsla(105, 80%, 57%, 50%);
-    --status-green-dark: hsl(105, 80%, 45%);
-    --status-green-text: white;
-    --status-yellow: hsl(44, 100%, 62%);
-    --status-yellow-shadow: hsla(44, 100%, 62%, 50%);
-    --status-yellow-dark: hsl(44, 100%, 45%);
-    --status-yellow-text: black;
-    --status-red: hsl(5, 100%, 61%);
-    --status-red-shadow: hsla(5, 100%, 61%, 50%);
-    --status-red-dark: hsl(5, 100%, 45%);
-    --status-red-text: white;
-
-    --status-pending: var(--status-yellow);
-    --status-pending-text: var(--status-yellow-text);
-    --status-approved: var(--status-yellow);
-    --status-approved-text: var(--status-yellow-text);
-    --status-issued: var(--status-yellow);
-    --status-issued-text: var(--status-yellow-text);
-    --status-completed: var(--status-green);
-    --status-completed-text: var(--status-green-text);
-    --status-denied: var(--status-red);
-    --status-denied-text: var(--status-red-text);
-    --status-cancelled: var(--status-red);
-    --status-cancelled-text: var(--status-red-text);
-    --status-expired: var(--status-red);
-    --status-expired-text: var(--status-red-text);
-}
-
-* {
-    box-sizing: border-box;
-    -webkit-user-select: none;
-    user-select: none;
-}
-
-html {
-    color: var(--black);
-    background: var(--white);
-}
-
-body {
-    display: grid;
-    align-items: center;
-}
-
-html, body {
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-}
-
-a {
-    color: inherit;
-}
-
-input, textarea, select, button {
-    appearance: none;
-    font: inherit;
-    text-align: inherit;
-}
-
-textarea {
-    resize: vertical;
-}
-
-input[type=text], input[type=password], input[type=search], input[type=number], input[type=email], textarea {
-    padding: 0.3rem 0rem;
-    background: none;
-    border: none;
-    border-bottom: 0.05rem solid var(--gray);
-    border-radius: 0;
-    transition: background 0.1s, border-bottom 0.1s;
-}
-
-input[type=number]:invalid, input[type=email]:invalid {
-    background: var(--light-red);
-    border-bottom: 0.05rem solid var(--light-red-2);
-    color: var(--red);
-    font-weight: bold;
-}
-
-input[type=number]:invalid:focus, input[type=email]:invalid:focus {
-    border-bottom: 0.05rem solid var(--red);
-}
-
-input[type=text]:disabled, input[type=search]:disabled, input[type=number]:disabled, input[type=email]:disabled, textarea:disabled {
-    background: var(--light-gray);
-}
-
-input[type=text]:focus, input[type=password]:focus, input[type=search]:focus, input[type=number]:focus, input[type=email]:focus, textarea:focus {
-    outline: none;
-    border-bottom: 0.05rem solid var(--dark-blue);
-}
-
-input[type=submit], input[type=button], input[type=date], a.btn, select, button {
-    padding: 0.5rem 0.7rem;
-    background: var(--white);
-    box-shadow: 0rem 0.2rem 0.4rem var(--btn-shadow);
-    border: none;
-    border-radius: 0.5rem;
-    width: -moz-fit-content;
-    width: fit-content;
-    text-decoration: none;
-    transition: background 0.1s, box-shadow 0.1s;
-}
-
-input[type=submit]:hover, input[type=button]:hover, input[type=date]:hover, a.btn:hover, select:hover, button:hover {
-    cursor: pointer;
-}
-
-input[type=button]:not(:disabled):hover, input[type=date]:not(:disabled):hover, a.btn:not(:disabled):hover, select:not(:disabled):hover, button:not(:disabled):hover,
-input[type=button]:focus, input[type=date]:focus, a.btn:focus, select:focus, button:focus {
-    background: var(--light-gray-2);
-    box-shadow: 0rem 0.1rem 0.2rem var(--btn-shadow);
-}
-
-input[type=submit] {
-    color: white;
-    font-weight: bold;
-}
-
-input[type=submit]:not(:disabled) {
-    background: var(--blue);
-    box-shadow: 0rem 0.2rem 0.4rem var(--blue-shadow);
-}
-
-input[type=submit]:not(:disabled):hover, input[type=submit]:not(:disabled):focus {
-    background: var(--dark-blue);
-    box-shadow: 0rem 0.1rem 0.2rem var(--blue-shadow);
-}
-
-input[type=submit].btn-red:not(:disabled) {
-    background: var(--red);
-    box-shadow: 0rem 0.2rem 0.4rem var(--red-shadow);
-}
-
-input[type=submit].btn-red:not(:disabled):hover, input[type=submit].btn-red:not(:disabled):focus {
-    background: var(--dark-red);
-    box-shadow: 0rem 0.1rem 0.2rem var(--red-shadow);
-}
-
-input[type=submit]:disabled, input[type=button]:disabled, a.btn:disabled, select:disabled, button:disabled {
-    background: var(--gray);
-    color: white;
-    cursor: not-allowed;
-}
-
-input[type=submit]:focus, input[type=button]:focus, input[type=date]:focus, a.btn:focus, button:focus, select:focus,
-input[type=submit]:active, input[type=button]:active, input[type=date]:active, a.btn:active, button:active, select:active {
-    outline: 0.05rem solid var(--black);
-}
-
-#err-wrapper {
-    height: 100%;
-    width: 100%;
-    display: grid;
-    grid-template-rows: 100%;
-    grid-template-columns: 100%;
-    align-items: center;
-    justify-items: center;
-    text-align: center;
-}
-
-#err-code {
-    font-size: 8rem;
-    color: var(--red);
-    line-height: 80%;
-}
-
-#err-msg {
-    font-size: 1.25rem;
-    font-weight: bold;
-    font-style: italic;
-}
-
-main {
-    overflow: hidden;
-}
-
-#profile-options {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    margin: 0px;
-    right: 0px;
-
-    width: 200px;
-    max-height: 0;
-    padding: 8px;
-
-    background-color: var(--white);
-    border: 1px solid var(--gray);
-    border-radius: 20px;
-    box-shadow: 0rem 0.2rem 0.4rem var(--btn-shadow);;
-    
-    overflow:hidden;
-    transition: max-height 0.1s ease-in-out;
-    z-index: 1000;
-}
-
-#profile-options p {
-    border-radius: 10px;
-    padding: 7px;
-    
-    text-align: left;
-    font-weight: lighter;
-}
-
-#profile-options p:hover {
-    background: var(--light-gray);
-}
-
-#add-user-form {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    justify-content: flex-end;
-}
+@import url("style_request.css");
+@import url("style_table.css");
