--- a/src/static/style_modal.css
+++ b/src/static/style_modal.css
@@ -1,59 +1,59 @@
-.modal-wrapper {
+dialog {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: none;
+    border: none;
+}
+
+dialog::backdrop {
+    background: var(--modal-bg);
+}
+
+dialog:not([open]) {
     display: none;
+}
+
+dialog .modal-back {
+    width: 100%;
+    height: 100%;
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 10;
-    grid-template: 100% / 100%;
-    align-items: center;
-    justify-items: center;
 }
 
-.modal-wrapper.show {
-    display: grid;
-}
-
-.modal-background, .modal-main {
-    grid-area: 1 / 1 / 2 / 2;
-}
-
-.modal-background {
-    width: 100%;
-    height: 100%;
-    background: hsl(255, 15%, 15%, 0.25);
-}
-
-.modal-main {
+dialog .modal-main {
     width: max(20rem, 50%);
     background: var(--white);
+    border: none;
     box-shadow: 0rem 0.25rem 0.5rem var(--shadow);
     border-radius: 0.75rem;
     padding: 1.5rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    position: relative;
+    position: fixed;
 }
 
-.modal-main h1,
-.modal-main p {
+dialog h1,
+dialog p {
     margin: 0;
 }
 
-.modal-main form {
+dialog form {
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
-.modal-main input[type=submit] {
+dialog input[type=submit] {
     align-self: end;
 }
 
-.modal-main form .form-grid {
+dialog form .form-grid {
     width: 100%;
     display: grid;
     gap: 0.5rem;
@@ -61,34 +61,36 @@
     align-items: baseline;
 }
 
-.modal-main form label {
+dialog form label {
     justify-self: end;
 }
 
-.modal-main form span:last-child {
+dialog form > span:last-child {
     display: flex;
     align-items: center;
+    justify-content: end;
     gap: 1rem;
 }
 
-.modal-main form .form-msg {
-    font-style: italic;
-    text-align: right;
-}
-
-.modal-main form .form-msg.error {
-    font-weight: bold;
-    color: var(--red);
-}
-
-.modal-main form span:last-child > * {
+dialog form > span:last-child > * {
     flex-grow: 1;
     flex-shrink: 1;
 }
 
-.modal-main form span:last-child input[type=submit] {
+dialog form > span:last-child input[type=button],
+dialog form > span:last-child input[type=submit] {
     flex-grow: 0;
     flex-shrink: 0;
+}
+
+dialog form .form-msg {
+    font-style: italic;
+    text-align: right;
+}
+
+dialog form .form-msg.error {
+    font-weight: bold;
+    color: var(--red);
 }
 
 .modal-close:not(:disabled) {
@@ -122,6 +124,38 @@
     outline: none;
 }
 
+.modal-main > .hidden {
+    display: none;
+}
+
+/* #modal-forgot-password particulars */
+#modal-forgot-password .modal-main > div:not(.hidden) {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+#code-span {
+    display: flex;
+    gap: 1rem;
+}
+
+#code-span input {
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+#code-span button {
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+
+#code-span button.hidden {
+    display: none;
+}
+
+/* #modal-change-password & #modal-change-email particulars */
+
 #password-note {
     font-size: smaller;
     font-style: italic;
@@ -130,4 +164,32 @@
 #password-note ul {
     font-size: inherit;
     margin: 0.125rem 0 0 0;
+}
+
+/* #modal-requests particulars */
+
+#modal-requests .modal-main > p {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+#modal-requests input[type=number] {
+    text-align: right;
+}
+
+#quantity-span > span {
+    display: flex;
+    align-items: baseline;
+    gap: 0.5rem;
+}
+
+#quantity-span > span > * {
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+#quantity-span > span > span {
+    flex-grow: 0;
+    flex-shrink: 0;
 }
