--- a/src/templates/inventory/request.html
+++ b/src/templates/inventory/request.html
@@ -191,7 +191,7 @@
     document.querySelector("#submit-form").addEventListener("submit", e => {
         e.preventDefault();
         
-        fetch("{{ url_for('bp_request.make_request') }}", {
+        fetch("{{ url_for('bp_inventory.request_items') }}", {
             "method": "POST",
             "headers": {
                 "Content-Type": "application/json"
