--- a/src/static/style.css
+++ b/src/static/style.css
@@ -8,5 +8,6 @@
 @import url("style_login.css");
 @import url("style_main.css");
 @import url("style_modal.css");
-@import url("style_request.css");
+@import url("style_requests.css");
 @import url("style_table.css");
+@import url("style_users.css");
