--- a/src/static/style_inventory.css
+++ b/src/static/style_inventory.css
@@ -185,56 +185,6 @@ main h1 {
     background: initial;
 }
 
-/* table column widths */
-
-.inventory-table .table-row {
-    grid-template-columns: 0.625fr 0.75fr 2fr 0.5fr 0.75fr 0.5fr 0.5fr;
-}
-
-.add-table .table-row {
-    grid-template-columns: 0.625fr 0.75fr 2fr 1fr 0.75fr 0.5fr 3rem;
-}
-
-.search-table .table-row {
-    grid-template-columns: 0.625fr 0.75fr 2fr 0.5fr 0.75fr 0.5fr 0.5fr 3rem;
-}
-
-.search-table.update .table-row {
-    grid-template-columns: 0.625fr 0.75fr 2fr 0.5fr 0.75fr 0.5fr 3rem;
-}
-
-.selection-table.remove .table-row {
-    grid-template-columns: 0.625fr 0.75fr 2fr 0.5fr 0.75fr 0.5fr 0.5fr 3rem;
-}
-
-.selection-table.request .table-row {
-    grid-template-columns: 0.625fr 0.75fr 2fr 0.5fr 0.75fr 0.5fr 0.5fr 0.5fr 3rem;
-}
-
-.selection-table.update .table-row {
-    grid-template-columns: 0.625fr 0.75fr 2fr 1fr 0.75fr 0.5fr 3rem;
-}
-
-.selection-table.delivery .table-row {
-    grid-template-columns: 0.625fr 0.75fr 2fr 0.5fr 0.75fr 0.5fr 0.75fr 0.5fr 3rem;
-}
-
-.delivery-table .table-row {
-    grid-template-columns: 0.375fr 0.625fr 0.75fr 2fr 0.5fr 0.75fr 0.5fr 0.75fr 0.75fr 0.5fr;
-}
-
-.request-table.custodian .table-row {
-    grid-template-columns: 0.375fr 0.5fr 0.75fr 0.5fr 0.625fr 0.75fr 2fr 0.5fr 0.5fr 0.5fr 0.5fr 0.375fr 0.375fr;
-}
-
-.request-table.user .table-row {
-    grid-template-columns: 0.375fr 0.75fr 0.5fr 0.625fr 0.75fr 2fr 0.5fr 0.5fr 0.5fr 0.5fr 0.75fr;
-}
-
-.user-table .table-row {
-    grid-template-columns: 15% 15% 15% 25% 15% 15%;
-}
-
 /* table cell formatting */
 
 .table-row > .left {
@@ -448,7 +398,7 @@ main h1 {
     display: unset;
 }
 
-.table-row .table-sortable > button {
+.table-row .table-sortable > button:not(:disabled) {
     cursor: pointer;
     display: flex;
     gap: 0.5rem;
@@ -459,9 +409,9 @@ main h1 {
     border-radius: 0.025rem;
 }
 
-.table-sortable > button,
-.table-sortable > button:hover,
-.table-sortable > button:focus {
+.table-sortable > button:not(:disabled),
+.table-sortable > button:not(:disabled):hover,
+.table-sortable > button:not(:disabled):focus {
     background: none;
     box-shadow: none;
 }
