--- a/src/static/style_main.css
+++ b/src/static/style_main.css
@@ -32,7 +32,6 @@ a {
 }
 
 input, textarea, select, button {
-    appearance: none;
     font: inherit;
     text-align: inherit;
 }
@@ -61,10 +60,6 @@ input[type=number]:invalid:focus, input[type=email]:invalid:focus {
     border-bottom: 0.05rem solid var(--red);
 }
 
-input[type=text]:disabled, input[type=search]:disabled, input[type=number]:disabled, input[type=email]:disabled, textarea:disabled {
-    background: var(--light-gray);
-}
-
 input[type=text]:focus, input[type=password]:focus, input[type=search]:focus, input[type=number]:focus, input[type=email]:focus, textarea:focus {
     outline: none;
     border-bottom: 0.05rem solid var(--dark-blue);
@@ -86,10 +81,14 @@ input[type=submit]:hover, input[type=button]:hover, input[type=date]:hover, a.bt
     cursor: pointer;
 }
 
-input[type=button]:not(:disabled):hover, input[type=date]:not(:disabled):hover, a.btn:not(:disabled):hover, select:not(:disabled):hover, button:not(:disabled):hover,
+input[type=button]:hover, input[type=date]:hover, a.btn:hover, select:hover, button:hover,
 input[type=button]:focus, input[type=date]:focus, a.btn:focus, select:focus, button:focus {
     background: var(--light-gray-2);
     box-shadow: 0rem 0.1rem 0.2rem var(--btn-shadow);
+}
+
+input[type=text]:disabled, input[type=search]:disabled, input[type=number]:disabled, input[type=email]:disabled, textarea:disabled {
+    background: var(--light-gray);
 }
 
 input[type=submit] {
@@ -97,45 +96,49 @@ input[type=submit] {
     font-weight: bold;
 }
 
-input[type=submit]:not(:disabled) {
+input[type=submit] {
     background: var(--blue);
     box-shadow: 0rem 0.2rem 0.4rem var(--blue-shadow);
 }
 
-input[type=submit]:not(:disabled):hover, input[type=submit]:not(:disabled):focus {
+input[type=submit]:hover,
+input[type=submit]:focus {
     background: var(--dark-blue);
     box-shadow: 0rem 0.1rem 0.2rem var(--blue-shadow);
 }
 
-input[type=submit].btn-red:not(:disabled) {
+input[type=submit].btn-red {
     background: var(--red);
     box-shadow: 0rem 0.2rem 0.4rem var(--red-shadow);
 }
 
-input[type=submit].btn-red:not(:disabled):hover, input[type=submit].btn-red:not(:disabled):focus {
+input[type=submit].btn-red:hover,
+input[type=submit].btn-red:focus {
     background: var(--dark-red);
     box-shadow: 0rem 0.1rem 0.2rem var(--red-shadow);
 }
 
-input[type=submit].btn-green:not(:disabled) {
+input[type=submit].btn-green {
     background: var(--green);
     box-shadow: 0rem 0.2rem 0.4rem var(--green-shadow);
 }
 
-input[type=submit].btn-green:not(:disabled):hover, input[type=submit].btn-green:not(:disabled):focus {
+input[type=submit].btn-green:hover,
+input[type=submit].btn-green:focus {
     background: var(--dark-green);
     box-shadow: 0rem 0.1rem 0.2rem var(--green-shadow);
-}
-
-input[type=submit]:disabled, input[type=button]:disabled, a.btn:disabled, select:disabled, button:disabled {
-    background: var(--gray);
-    color: white;
-    cursor: not-allowed;
 }
 
 input[type=submit]:focus, input[type=button]:focus, input[type=date]:focus, a.btn:focus, button:focus, select:focus,
 input[type=submit]:active, input[type=button]:active, input[type=date]:active, a.btn:active, button:active, select:active {
     outline: 0.05rem solid var(--black);
+}
+
+input[type=submit]:disabled, input[type=button]:disabled, a.btn:disabled, select:disabled, button:disabled {
+    background: var(--gray);
+    box-shadow: 0rem 0.2rem 0.4rem var(--btn-shadow);
+    color: white;
+    cursor: not-allowed;
 }
 
 #err-wrapper {
