User & request page adjustments
- User and request tables now refresh instead of reloading entire page
- Fixes to forgot password flow

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -199,6 +199,7 @@
                     "Content-Type": "application/json"
                 },
                 "body": JSON.stringify({
+                    "email": document.querySelector('#email').value,
                     "new-password": document.querySelector('#new-password').value
                 })
             }).then(async d => {
